[gd_scene load_steps=6 format=3 uid="uid://cb22ijds17kmj"]

[ext_resource type="Script" path="res://addons/FeagiIntegration/Editor/Panel/Components/Devices/Device_Specific_UIs/EmuInputConfigurations/EmuInputsConfiguration/Editor_FEAGI_UI_Panel_EmuInputConfiguration.gd" id="1_8dupm"]
[ext_resource type="StyleBox" uid="uid://qompoudaneb5" path="res://addons/FeagiIntegration/Editor/Resources/Backgrounds/Background_4.tres" id="2_0aien"]
[ext_resource type="StyleBox" uid="uid://c3qxrm7673n1b" path="res://addons/FeagiIntegration/Editor/Resources/Backgrounds/Button_4_highlight.tres" id="3_8inqv"]
[ext_resource type="StyleBox" uid="uid://cqpphg6xpmipu" path="res://addons/FeagiIntegration/Editor/Resources/Backgrounds/Button_4_click.tres" id="4_rj4iw"]
[ext_resource type="StyleBox" uid="uid://xf5pmjuxx1mn" path="res://addons/FeagiIntegration/Editor/Resources/Backgrounds/Button_4_normal.tres" id="5_nsp2o"]

[node name="EditorFeagiUiPanelEmuInputConfiguration" type="MarginContainer"]
offset_top = 186.0
offset_right = 256.0
offset_bottom = 186.0
script = ExtResource("1_8dupm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0aien")

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GodotInputName" type="RichTextLabel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
theme_override_styles/background = ExtResource("2_0aien")
bbcode_enabled = true
text = "[center][b][u]Name[/u][/b][/center]"

[node name="GodotInputType" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Type
"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
alignment = 1

[node name="start" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover = ExtResource("3_8inqv")
theme_override_styles/pressed = ExtResource("4_rj4iw")
theme_override_styles/normal = ExtResource("5_nsp2o")
text = "Not binded. Click to bind"

[node name="emuselect" type="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/emuselect"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GodotInputEvent" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/emuselect/VBoxContainer"]
layout_mode = 2
text = "Emulate Godot Input Event"

[node name="Keyboard" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/emuselect/VBoxContainer"]
layout_mode = 2
text = "Emulate Keyboard"

[node name="MouseClick" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/emuselect/VBoxContainer"]
visible = false
layout_mode = 2
text = "Emulate Mouse Click"

[node name="InputEventConfig" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig/HBoxContainer"]
layout_mode = 2
tooltip_text = "Which Godot Input Event should this press (as defined by your Godot project settings)"
mouse_filter = 0
text = "Input Event: "

[node name="OptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Instead of using the actual numerical value from FEAGI, press fully when the value from FEAGI surpases the given value and release fully when it is below"
mouse_filter = 0
text = "Use thresholding:"

[node name="enablethresholding" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig/HBoxContainer2"]
layout_mode = 2
button_pressed = true

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig/HBoxContainer3"]
layout_mode = 2
tooltip_text = "Above this value, the input event will be pressed, below it will be released"
mouse_filter = 0
text = "Threshold Cutoff: "

[node name="SpinBox" type="SpinBox" parent="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
alignment = 1

[node name="Keyboard" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/Keyboard"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/Keyboard/HBoxContainer"]
layout_mode = 2
tooltip_text = "What Keyboard key should be pressed?"
mouse_filter = 0
text = "Keyboard Key: "

[node name="OptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer/Keyboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/Keyboard"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/Keyboard/HBoxContainer3"]
layout_mode = 2
tooltip_text = "Above this value, the key will be pressed, below it will be released"
mouse_filter = 0
text = "Threshold Cutoff: "

[node name="SpinBox" type="SpinBox" parent="PanelContainer/HBoxContainer/VBoxContainer/Keyboard/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
alignment = 1

[node name="Reset" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Reset"

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/start" to="." method="_step_2_ask_emuInput_type"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/emuselect/VBoxContainer/GodotInputEvent" to="." method="_step_3_configure_godotInputEvent"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/emuselect/VBoxContainer/Keyboard" to="." method="_step_3_configure_keyboard"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig/HBoxContainer2/enablethresholding" to="PanelContainer/HBoxContainer/VBoxContainer/InputEventConfig/HBoxContainer3/SpinBox" method="set_editable"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Reset" to="." method="_step_1_set_to_unconfigured"]
